--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zero2prod"
+name = "z2p"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,7 +10,7 @@ path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "zero2prod"
+name = "z2p"
 
 [dependencies]
 actix-web = "4"
@@ -27,8 +27,12 @@ tracing-bunyan-formatter = "0.3.1"
 tracing-log = "0.1.1"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
+unicode-segmentation = "1.10.1"
+validator = "0.16"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
+claims = "0.7.0"
+fake = "~2.3.0"
 once_cell = "1.7.2"
 
