--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ config = { version = "0.13", default-features = false, features = ["yaml"] }
 sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 tracing = "0.1.19"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3.1"
@@ -35,4 +36,6 @@ reqwest = { version = "0.11", features = ["json"] }
 claims = "0.7.0"
 fake = "~2.3.0"
 once_cell = "1.7.2"
-
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
+serde_json = "1"
