--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
 unicode-segmentation = "1.10.1"
 validator = "0.16"
+rand = { version = "0.8", features = ["std_rng"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
