--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ secrecy = { version = "0.8", features = ["serde"] }
 unicode-segmentation = "1.10.1"
 validator = "0.16"
 rand = { version = "0.8", features = ["std_rng"] }
+anyhow = "1"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
